fix: Fixed style to improve readability

--- a/styles/proofreading.css
+++ b/styles/proofreading.css
@@ -1,5 +1,5 @@
 :root {
-	--pending: #8d6c11;
+	--pending: #bb7900;
 	--approved: #2f571f;
 }
 
@@ -14,6 +14,14 @@ body.proofreading .node.approved {
 body.proofreading .script .pending {
 	background-color: var(--pending);
 	color: white;
+}
+
+body.proofreading .node.pending.selected {
+	fill: #e0c593;
+}
+
+body.proofreading .node.approved.selected {
+	fill: #a6c599;
 }
 
 .approve-panel {
